--- a/src/main/resources/templates/DownloadPage.mustache
+++ b/src/main/resources/templates/DownloadPage.mustache
@@ -20,7 +20,7 @@
         <div class="Column">
             <h2 class="heading2-x390q">Choose your preferences</h2>
             <a class="Button">
-                <form method="POST" action="http://localhost:8080/api/download">
+                <form method="POST" action="https://y2video.herokuapp.com/api/download">
                         <div class="submit-form">
                             <label>
                                 <input type="text" id="link" placeholder="Link" name="link" value="{{link}}" readonly>
