--- a/src/main/resources/templates/Landing.mustache
+++ b/src/main/resources/templates/Landing.mustache
@@ -19,7 +19,7 @@
     <div class="Container">
         <div class="Column">
             <h2 class="heading2-x390q">Free & Simple tool for downloading YouTube videos</h2>
-            <a class="Button" href="https://y2vid.herokuapp.com/start">
+            <a class="Button" href="https://y2video.herokuapp.com/start">
                 <span>Get started</span>
             </a>
         </div>
