--- a/src/main/resources/templates/StartPage.mustache
+++ b/src/main/resources/templates/StartPage.mustache
@@ -41,7 +41,7 @@
         </div>
     </div>
 </section>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script>
     function clickFunction() {
         const input = document.getElementById('link').value;
