--- a/src/main/resources/templates/StartPage.mustache
+++ b/src/main/resources/templates/StartPage.mustache
@@ -19,7 +19,7 @@
     <div class="Container">
         <div class="Column">
             <h2 class="heading2-x390q">Paste YouTube link below</h2>
-            <form method="GET" id="submit-form" action="https://y2video.herokuapp.com/download" onkeydown="return event.key !== 'Enter';">
+            <form method="GET" id="submit-form" action="download" onkeydown="return event.key !== 'Enter';">
                 <div>
                     <label>
                         <input type="text" id="link" placeholder="Link" name="link" style="padding: 4px 4px;" required>
