adding youtube logo

--- a/src/main/resources/templates/Landing.mustache
+++ b/src/main/resources/templates/Landing.mustache
@@ -24,8 +24,7 @@
             </a>
         </div>
         <div class="Column">
-            <img src="https://relate-av4mfw.s3.us-east-2.amazonaws.com/626e8cfdd917974287576c8a/YouTube-Icon-Full-Color-Logo.wine.svg"
-                 alt=""/>
+            <img src="/images/youtube.png" alt=""/>
         </div>
     </div>
 </section>
