--- a/src/main/resources/templates/StartPage.mustache
+++ b/src/main/resources/templates/StartPage.mustache
@@ -37,7 +37,7 @@
             </form>
         </div>
         <div class="Column">
-            <img src="https://relate-av4mfw.s3.us-east-2.amazonaws.com/626e8cfdd917974287576c8a/YouTube-Icon-Full-Color-Logo.wine.svg"/>
+            <img src="/images/youtube.png" alt=""/>
         </div>
     </div>
 </section>
