--- a/src/main/resources/templates/DownloadPage.mustache
+++ b/src/main/resources/templates/DownloadPage.mustache
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-    <link rel="stylesheet" href="https://styles.relate.design/css/styles.css">
     <link rel="stylesheet" href="/styles/download.css"/>
     <title>Download</title>
 </head>
@@ -60,7 +59,7 @@
             </a>
         </div>
         <div class="Column">
-            <img src="https://relate-av4mfw.s3.us-east-2.amazonaws.com/626e8cfdd917974287576c8a/YouTube-Icon-Full-Color-Logo.wine.svg"/>
+            <img src="/images/youtube.png" alt=""/>
         </div>
     </div>
     <script type="text/javascript">
